--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
     <title>black&white-tv | Streaming Movies, Series & Live Sports</title>
     <meta name="description" content="Watch movies, series and live sports streaming on black&white-tv" />
     <meta name="author" content="black&white-tv" />
-    <meta name="author" content="Lovable" />
-
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="author" content="Mahamudun Nabi Siam" />
   </head>
 
   <body>
